# clabs-smart-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  clabs_smart_commit.py  pyproject.toml  run_smart_commit.sh  testfile.txt
