[tool.poetry]
name = "smart-commit"
version = "0.1.0"
description = "Smart commit tool"
authors = ["hari77725 <harihara.sudhan@customerlabs.co>"]
readme = "README.md"
packages = [
  { include = "clabs_smart_commit.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"

[tool.poetry.scripts]
clabs_smart_commit = "clabs_smart_commit:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
